# ToDoList

./: .env.example  .gitignore  alembic.ini  checking.py  config.py  docker-compose.yml  in_memory_storage.py  main.py  models.py  project_manager.py  pyproject.toml  task_manager.py  validators.py
alembic/: env.py
alembic/versions/: 1cff9ab332f3_add_closed_at_column_in_task_table.py  439f2769822b_initial_project_and_task_tables.py  b53656c228e5_create_projects_and_tasks_tables.py  e9efea2e4dbb_initial_project_and_task_tables.py
api/: __init__.py  main.py  routers.py
api/controller_schemas/: __init__.py
api/controller_schemas/requests/: __init__.py  project_requests.py  task_requests.py
api/controller_schemas/responses/: __init__.py  project_responses.py  task_responses.py
api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
cli/: console.py
commands/: autoclose_overdue.py  scheduler.py
db/: base.py  session.py
exceptions/: base.py  service_exceptions.py
models/: __init__.py  project.py  task.py
repositories/: __init__.py  project_repository.py  task_repository.py
services/: __init__.py  project_manager.py  project_service.py  task_manager.py  task_service.py
