[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "tinaOmran",email = "145983028+tinaOmran@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
