[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "tinaOmran",email = "145983028+tinaOmran@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.4"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

